--- a/LLama.Web/Pages/Interactive.cshtml
+++ b/LLama.Web/Pages/Interactive.cshtml
@@ -169,6 +169,7 @@
 
         const scrollContainer = $("#scroll-container");
         const outputContainer = $("#output-container");
+        const chatInput = $("#input");
 
 
         const onStatus = (status, data) => {
@@ -227,12 +228,12 @@
 
 
         const sendPrompt = () => {
-            const text = $("#input").val();
+            const text = chatInput.val();
             if (text) {
                 disableControls();
                 outputContainer.append(Mustache.render(outputUserTemplate, { text: text, date: getDateTime() }));
                 connection.invoke('SendPrompt', text);
-                $("#input").val(null);
+                chatInput.val(null);
                 scrollToBottom(true);
             }
         }
@@ -330,6 +331,13 @@
         $("#clear").on("click", clearOutput);
         $("#cancel").on("click", cancelPrompt);
         $("#Prompt").on("change", updatePrompt);
+        chatInput.on('keydown', function (event) {
+            if (event.key === 'Enter' && !event.shiftKey) {
+                event.preventDefault();
+                sendPrompt();
+            }
+        });
+
 
 
         // Map signalr functions
