Add Instruct and Stateless support

--- a/LLama.Web/Pages/Shared/_Layout.cshtml
+++ b/LLama.Web/Pages/Shared/_Layout.cshtml
@@ -24,7 +24,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Interactive">Interactive</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Executor/Interactive">Interactive</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Executor/Instruct">Instruct</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Executor/Stateless">Stateless</a>
                         </li>
                     </ul>
                 </div>
