Move response generation from Hub to Service

--- a/LLama.Web/Pages/Shared/_ChatTemplates.cshtml
+++ b/LLama.Web/Pages/Shared/_ChatTemplates.cshtml
@@ -58,3 +58,7 @@
         <span>{{parameter}}</span>
     </div>
 </script>
+
+<script id="signatureTemplate" type="text/html">
+    <span>{{content}}</span>
+</script>
