Improved formatting of response

--- a/LLama.Web/wwwroot/css/site.css
+++ b/LLama.Web/wwwroot/css/site.css
@@ -31,4 +31,6 @@ footer {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
-
+#output-container .content {
+    white-space: break-spaces;
+}
