--- a/LLama.Web/Pages/Shared/_ChatTemplates.cshtml
+++ b/LLama.Web/Pages/Shared/_ChatTemplates.cshtml
@@ -12,7 +12,7 @@
              <img src="~/image/human.png" width="60"/>
          </div>
         <div class="d-flex flex-column flex-fill justify-content-between">
-            <span class="w-100" style="resize:none" >{{text}}</span>
+            <span class="content" style="resize:none" >{{text}}</span>
              <div class="d-flex justify-content-end">
                  <i>{{date}}</i>
             </div>
@@ -26,9 +26,7 @@
             <img src="~/image/robot.png" width="60"/>
         </div>
         <div id="{{id}}" class="d-flex flex-column flex-fill justify-content-between">
-            <span class="content">
-                <img src="~/image/loading.gif" width="30" />
-            </span>
+            <span class="content"><img src="~/image/loading.gif" width="30" /></span>
             <div class="d-flex justify-content-end">
                 <div class="d-flex flex-column align-items-end">
                     <i class="date"></i>
