Fix up issues found during testing

--- a/LLama.Web/Pages/Shared/_ChatTemplates.cshtml
+++ b/LLama.Web/Pages/Shared/_ChatTemplates.cshtml
@@ -25,7 +25,7 @@
         <div class="m-2 me-4">
             <img src="~/image/robot.png" width="60"/>
         </div>
-        <div id="{{id}}" class="d-flex flex-column flex-fill justify-content-between">
+        <div id="{{uniqueId}}" class="d-flex flex-column flex-fill justify-content-between">
             <span class="content"><img src="~/image/loading.gif" width="30" /></span>
             <div class="d-flex justify-content-end">
                 <div class="d-flex flex-column align-items-end">
