--- a/LLama.Web/Pages/Index.cshtml
+++ b/LLama.Web/Pages/Index.cshtml
@@ -88,8 +88,11 @@
         </div>
 
         <div class="input-group mt-2">
-            <textarea id="input" type="text" class="form-control" value="what is a tree?" style="resize:none" rows="4">What is an apple?</textarea>
-            <button class="btn btn-primary input-control px-5" type="button" id="send" disabled="disabled" autocomplete="off">Send</button>
+            <textarea id="input" type="text" class="form-control" value="what is a tree?" style="resize:none" rows="2">What is an apple?</textarea>
+            <button class="btn btn-primary input-control px-4" type="button" id="send" disabled="disabled" autocomplete="off">
+                Send
+                <i class="bi bi-caret-right-fill"></i>
+            </button>
         </div>
 
     </div>
