--- a/LLama.Web/Pages/Shared/_Layout.cshtml
+++ b/LLama.Web/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom">
             <div class="container-fluid">
                 <img src="~/image/llama-sharp.png" class="navbar-image" />
                 <a class="navbar-brand" asp-area="" asp-page="/Index">LLamaSharp Web</a>
@@ -27,37 +27,39 @@
                         </li>
                     </ul>
                     <ul class="navbar-nav">
-                        <li class="nav-item dropdown pe-2">
-                            <button class="btn btn-link nav-link dropdown-toggle" id="bd-theme" type="button" data-bs-toggle="dropdown" data-bs-display="static" aria-label="Toggle theme" aria-expanded="false">
+                        <li class="nav-item dropdown theme">
+                            <a id="bd-theme" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Theme
-                            </button>
+                            </a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light">
+                                    <a href="#" class="dropdown-item" data-bs-theme-value="light">
                                         <i class="bi bi-brightness-high pe-2"></i>
                                         Light
-                                    </button>
+                                    </a>
                                 </li>
                                 <li>
-                                    <button type="button" class="dropdown-item d-flex align-items-center active" data-bs-theme-value="dark">
+                                    <a href="#" class="dropdown-item d-flex" data-bs-theme-value="dark">
                                         <i class="bi bi-moon-stars pe-2"></i>
                                         Dark
-                                    </button>
+                                    </a>
                                 </li>
                                 <li>
-                                    <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="auto">
+                                    <a href="#" class="dropdown-item d-flex" data-bs-theme-value="auto">
                                         <i class="bi bi-circle-half pe-2"></i>
                                         Auto
-                                    </button>
+                                    </a>
                                 </li>
                             </ul>
                         </li>
                         <li class="nav-item">
+                            <div class="vr h-100 mx-2"></div>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="https://github.com/SciSharp/LLamaSharp" target="_blank">
                                 <div class="d-flex flex-row align-items-center">
-                                    <h5 class="mb-0">
+                                    <h5 class="mb-0" title="LLamaSharp on GitHub">
                                         <i class="bi bi-github"></i>
-                                        <span>LLamaSharp</span>
                                     </h5>
                                 </div>
                             </a>
